# Youtube-Scanner

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  README.md  channel_fetcher.py  loggers.md  main.py  process_utils.py  pyproject.toml  requirements.txt  scheduler.py  storage.py  youtube_api.py
.github/workflows/: tests.yml
docs/: README.md  architecture.md  data_model.md  loggers.md
scripts/: install_dependencies.sh
src/: main.py
src/youtube_scanner/: __init__.py  channel_fetcher.py  logging_config.py  metadata_collector.py  models.py  scheduler.py  short_mapper.py  shorts_mapper.py  storage.py  transcript_fetcher.py  video_classifier.py
tests/: conftest.py  test_channel_fetcher.py  test_new_features.py  test_placeholder.py  test_scheduler.py  test_short_mapper.py  test_storage.py  test_transcript_fetcher.py  test_video_classifier.py  test_youtube_api.py
youtube_scanner/: channel_fetcher.py  models.py  scheduler.py  short_mapper.py  storage.py  transcript_fetcher.py  video_classifier.py
